💄 Updated Web Application

--- a/Web Application/index.html
+++ b/Web Application/index.html
@@ -8,6 +8,7 @@
   <title>Great Shoes inc.</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
+  <script>(function(w, d) { w.CollectId = "61d06145b104f43d8bab3086"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
 
 <body>
